--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Frontend Caching Strategy</title>
 </head>
 <body>
-  
+  <button id="fetch" type="button">Fetch</button>
+  <output id="output"></output>
+  <pre id="cached"></pre>
+  <script src="./src/index.ts"></script>
 </body>
 </html>
